# gitlab-lib

./: .gitlab-ci.yml  .travis.yml  CHANGES.rst  LICENSE  Makefile  PUBLISH_HOWTO.rst  README.rst  environment.yml  init-skeleton.sh  meta.make  meta.sh  setup.cfg  setup.py
TODO_PYTHON_PACKAGE_NAME/: __init__.py
docs/: Makefile  api.rst  conf.py  developer.rst  index.rst  init_sphinx.sh  intro.rst  make.bat
gitlablib/: __init__.py  gitlab.py
