# Project's metadata

# This metadata file use Configparser format: https://docs.python.org/3/library/configparser.html
# Metadata reference: https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# See also: https://packaging.python.org/en/latest/tutorials/packaging-projects/#configuring-metadata

[metadata]

name = TODO_PYTHON_PACKAGE_NAME
version = attr: TODO_PYTHON_PACKAGE_NAME.__version__
author = TODO_AUTHOR_NAME
author_email = TODO_AUTHOR_EMAIL
description = TODO_PROJECT_SHORT_DESC
long_description = file: README.rst
long_description_content_type = text/x-rst
url = TODO_PROJECT_GITHUB_URL
project_urls =
    Bug Tracker = TODO_PROJECT_ISSUE_TRACKER_URL
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks
keywords = TODO_PYTHON_PACKAGE_NAME

[options]

# Use the MANIFEST.in file if include_package_data is True
include_package_data = True

packages = TODO_PYTHON_PACKAGE_NAME
python_requires = >=3.6

# Installed scripts.
# E.g.
#scripts =
#    bin/first.py
#    bin/second.py

# The following list contains all dependencies that Python will try to
# install with this project
# E.g.
#install_requires =
#    requests
#    importlib; python_version == "2.6"

[options.entry_points]
# Entry point can be used to create plugins or to automatically generate
# system commands to call specific functions.
# Syntax: "name_of_the_command_to_make = package.module:function".
# E.g.:
# console_scripts =
#     hello = TODO_PYTHON_PACKAGE_NAME.hello:main